# GenHub

./: CHANGELOG.md  LICENSE  README.md  bindings.ts  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml  test.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 1_providers.sql  2_models.sql  3_chats.sql  4_messages.sql  5_message_blocks.sql
src-tauri/src/: api.rs  background.rs  data.rs  db.rs  main.rs  providers.rs  settings.rs  utils.rs
src-tauri/src/providers/: anthropic.rs  groqcloud.rs  local.rs  mistralai.rs  openai.rs
src/lib/components/: CodeBlock.svelte  MessageComponent.svelte
src/lib/modals/: Settings.svelte
src/routes/: +page.svelte
