[package]
name = "genhub"
version = "0.1.0"
description = "App for AI chat completions via API"
default-run = "genhub"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [
	"devtools",
	"dialog-message",
	"notification-all",
	"shell-open",
] }
rfd = "0.10"
atomicwrites = "0.4"
tokio = { version = "1.28", features = ["macros", "time", "sync"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = "0.4"
iso8601-duration = "0.2"
url = "2.3"
tauri-specta = { version = "1.0", features = ["javascript", "typescript"] }
specta = "1.0"
scraper = "0.18"
uuid = { version = "1", features = ["serde", "v4"] }
regex = "1"
syntect = "5"
dotenv = "0.15"
rayon = "1.10"
candle-core = "0.4"
candle-transformers = "0.4"
candle-nn = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
macos-app-nap = "0.0"
cocoa = "0.25"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
